@@ -1,5 +1,5 @@
 /* Extended Module Player
- * Copyright (C) 1996-2025 Claudio Matsuoka and Hipolito Carraro Jr
+ * Copyright (C) 1996-2026 Claudio Matsuoka and Hipolito Carraro Jr
  *
  * Permission is hereby granted, free of charge, to any person obtaining a
  * copy of this software and associated documentation files (the "Software"),
@@ -1945,13 +1945,12 @@ int xmp_start_player(xmp_context opaque, int rate, int format)
 	p->sequence = 0;
 
 	/* Set default volume and mute status */
-	for (i = 0; i < mod->chn; i++) {
-		if (mod->xxc[i].flg & XMP_CHANNEL_MUTE)
+	for (i = 0; i < XMP_MAX_CHANNELS; i++) {
+		if (i < mod->chn && (mod->xxc[i].flg & XMP_CHANNEL_MUTE)) {
 			p->channel_mute[i] = 1;
-		p->channel_vol[i] = 100;
-	}
-	for (i = mod->chn; i < XMP_MAX_CHANNELS; i++) {
-		p->channel_mute[i] = 0;
+		} else {
+			p->channel_mute[i] = 0;
+		}
 		p->channel_vol[i] = 100;
 	}
 
